1.6.8 RC3
---
- glCompress2DARB now works with OS X too.
- incorporated patches from debian.
- Added support for non power of 2 texture loading (if available)
- fixed bug #1609417. Bug in iluGetImageInfo
- iGetIntegervImage(IL_IMAGE_CHANNELS) now returns a correct value
- fixed bug #1561642. ILstring is poorly implemented (w.r.t const and others)
- fixed bug #1562955. PSD 16 bits
- ilInit and ilShutdown can now be called more then one times or shutdown even if not initialized without crashing anything.
- fixed bug #662903 ilBlit result incorrect when source is not (0,0)
- internal clamp functions now are macros
- ilSetAlpha now returns a boolean value since it can fail
- fixed an error in the configure script were breaking compilation if libpng-config wasn't in the path
- applied submitted patch #1550471. missing const in il_tiff.c
- fixed bug #1554447. broken bmp loading with less then 256 color and a palette
- applied submitted patch #1554358. headers fixes

1.6.8 RC2
-----
- applied submitted patch #1539074. Fixes some bugs with paletted images, adds iluScaleAlpha (from jbitnet)
- fixed OpenGL loading
- altivec code is now merged inside IL sources, not on a separate directory
- more dds fixes
- now the returned number of layer, mipmaps or subimage is correct (computed at every call)
- added ilGenImage() and ilDeleteImage()
- fixed iluMirror, ilMirror duplicate code
- added _mm_malloc _mm_free for vectorized code memory managment
- fixed precedence for memory mangment variants
- Altivec,SSE,SSE2,SSE3 checks completed
- applied submitted patch #1483941
- applied submitted patch #1476315
- applied submitted patch #1085415 DXT3 and DXT5 save is broken
- applied submitted patch #1504388.(by Hans de Goede)
- fixed bug #1411053 now Lump loads parameters are const pointer
- fixed bug #1211071 pcx with the padding header not 0 filled will be loaded
- fixed bug #1092521 png save memory leak fixed
- fixed bug #1183924 iluScale checks for return values of ilTexImage